# movie-recommendation-app

./: .gitignore  README.md  pyproject.toml
src/: movie_recommendataion.py
